--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://granthverma.github.io/TodoApp/",
   "name": "10todocontextlocal",
   "private": true,
   "version": "0.0.0",
